<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_data_recorder</name>
  <version>0.1.0</version>
  <description>A rosbag2 recorder node that backs up split files to an external location during recording</description>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_transport</depend>
  <depend>rosbag2_storage</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
